feat: Update styles and functionality for borrowings and subusers tables; add delete checkbox handling and UI improvements

--- a/static/CSS/Borrowings/borrowingsStyles.css
+++ b/static/CSS/Borrowings/borrowingsStyles.css
@@ -282,6 +282,10 @@ textarea {
     font-size: 1rem;
 }
 
+.borrowings-table thead th:first-child, .borrowings-table thead th:last-child {
+    text-align: center;
+}
+
 .borrowings-table tbody tr {
     background-color: #fff;
     transition: background-color 0.2s;
