--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -54,7 +54,7 @@
                         <span class="material-symbols-outlined">delete</span>
                         <p>Eliminar</p>
                         <div class="delete-options hidden">
-                            <input type="submit" form="delete-form" value="delete" id="delete-button" class="material-symbols-outlined">
+                            <input type="submit" form="delete-form" value="check" id="delete-button" class="material-symbols-outlined">
                             <label for="delete" class="cancel-delete material-symbols-outlined">close</label>
                         </div>
                     </label>
