--- a/static/CSS/Objects/mainStyles.css
+++ b/static/CSS/Objects/mainStyles.css
@@ -510,7 +510,7 @@ textarea {
     cursor: pointer;
 }
 
-.btn-confirm {
+.btn-confirm, .btn-delete {
     background: var(--fb-color);
     color: #fff;
     border: none;
@@ -518,6 +518,13 @@ textarea {
     border-radius: 8px;
     cursor: pointer;
 }
+
+.btn-delete:hover {
+    outline: var(--wood) 1px solid;
+    color: var(--sidebar-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px; 
+    background: #c9302c; }
 
 .btn-cancel:hover,
 .btn-confirm:hover {     
