--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/Objects/mainStyles.css'%}">
-    <title>Work space - Log Inventory</title>
+    <title>Espacio de Trabajo - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Work space Log Inventory">
+    <meta name="description" content="Espacio de Trabajo Log Inventory">
     <meta name="author" content="Log Inventory"> 
     <meta name="robots" content="noindex, nofollow"> 
 </head>
