--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -108,7 +108,7 @@
             <div id="deleteModal" class="modal-overlay" style="display: none;">
                 <div class="modal-content">
                     <h3 class="modal-title">Estás seguro?</h3>
-                    <p class="modal-text">Se eliminarán todos los objetos selccionados</p>
+                    <p class="modal-text">Se eliminarán todos los objetos seleccionados</p>
                     <div class="modal-buttons">
                         <button id="cancelDelete" class="btn-cancel">No</button>
                         <button id="confirmDelete" class="btn-delete">Si</button>
