--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/Users/subprofilesGroupStyles.css'%}">
+    <link rel="stylesheet" href="{%static '/CSS/GroupStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/Users/subusersStyles.css'%}">
     <title>Manejo de Grupos - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
@@ -72,13 +72,21 @@
             	</div>
         	</div>
         </div>
-        <div class="groups">
+        <div class="groups"> 
+        <input type="checkbox" class="delete hidden" id="delete">
         {% for form in forms %}
         <div class="group-container">
+            <div class="group-header">
+                    <input name="user_group-{{group.id}}" type="checkbox" class="delete-checkbox hidden">
+                    <span class="material-symbols-outlined toggle-icon">expand_more</span>
+                    <h3 class="group-title">{{form.instance.name}}</h3>
+                    <p class="group-in-charge">Tipo: {{form.instance.permissions.name}}</p>
+            </div>
+            <div class="group-body">
             <form method="POST" class="group-image" enctype="multipart/form-data">
                 <label for="id_image_{{form.instance.id}}">
                     <img src="{{form.instance.image.url}}" alt="Group Image">
-                    <div class="image-overlay">
+                    <div class="image-overlay"> 
                         <label class="delete-image material-symbols-outlined" for="delete_image_{{form.instance.id}}">delete</label>
                     </div>
                 </label>
@@ -101,9 +109,6 @@
                     <label for="id_permissions">Tipo de grupo:</label>
                     {{form.permissions}}
                 </div>
-                
-                <input type="submit" value="delete" class="delete-button material-symbols-outlined" form="delete_group_{{form.instance.id}}">
-                <input type="submit" value="Guardar" class="save-button">
             </form>
             <div class="group-description__container">
                 <label for="id_description_{{form.instance.id}}">Descripción:</label>
@@ -124,6 +129,11 @@
                     {%endif%}
                 </div>
             </div>
+            <form class="group-buttons" method="POST">
+                    {% csrf_token %}
+                    <input type="submit" value="delete" class="delete-button material-symbols-outlined" id="delete-button-{{form.instance.id}}" form="delete_group_{{form.instance.id}}">
+                    <input type="submit" value="Guardar" class="save-button" form="{{form.instance.id}}_form">
+                </form>
             <form method="POST">
                 {% csrf_token %}
                 <input type="number" value="{{form.instance.id}}" hidden name="id">
@@ -135,6 +145,7 @@
                 <input type="number" value="{{form.instance.id}}" hidden name="id">
                 <input type="checkbox" name="delete_group" id="id_delete_group_{{form.instance.id}}" checked hidden>
             </form>
+            </div>
         </div>
         {% endfor %}
         </div>
@@ -155,5 +166,6 @@
     {% endif %}
     <script src="{%static '/SCRIPTS/subusersGroupScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
+    <script src="{% static '/SCRIPTS/deleteScript.js' %}"></script>
 </body>
 </html>
