feat: Enhance delete functionality with improved user feedback and UI updates; add hidden delete form in object groups and subusers templates

--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -111,7 +111,7 @@
                     <p class="modal-text">Se eliminarán todos los objetos seleccionados</p>
                     <div class="modal-buttons">
                         <button id="cancelDelete" class="btn-cancel">No</button>
-                        <button id="confirmDelete" class="btn-delete">Si</button>
+                        <button id="confirmDelete" class="btn-delete">Borrar</button>
                     </div>
                 </div>
             </div>
