--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -65,7 +65,7 @@
                     <p class="modal-text">Se eliminarán todos los usuarios seleccionados</p>
                     <div class="modal-buttons">
                         <button id="cancelDelete" class="btn-cancel">No</button>
-                        <button id="confirmDelete" class="btn-delete">Si</button>
+                        <button id="confirmDelete" class="btn-delete">Borrar</button>
                     </div>
                 </div>
             </div>
