feat: Enhance delete functionality with improved user feedback and UI updates; update modal texts and add hidden delete forms in user and group templates

--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -64,7 +64,7 @@
                     <h3 class="modal-title">Estás seguro?</h3>
                     <p class="modal-text">Se eliminarán todos los usuarios seleccionados</p>
                     <div class="modal-buttons">
-                        <button id="cancelDelete" class="btn-cancel">No</button>
+                        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
                         <button id="confirmDelete" class="btn-delete">Borrar</button>
                     </div>
                 </div>
