--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -110,7 +110,7 @@
                     <h3 class="modal-title">Estás seguro?</h3>
                     <p class="modal-text">Se eliminarán todos los objetos seleccionados</p>
                     <div class="modal-buttons">
-                        <button id="cancelDelete" class="btn-cancel">No</button>
+                        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
                         <button id="confirmDelete" class="btn-delete">Borrar</button>
                     </div>
                 </div>
