--- a/templates/Objects/object_groups.html
+++ b/templates/Objects/object_groups.html
@@ -110,7 +110,7 @@
         	<div id="deleteModal" class="modal-overlay" style="display: none;">
             	<div class="modal-content">
             	    <h3>Estás seguro?</h3>
-            	    <p>Esto eliminará permanentemente el grupo.</p>
+            	    <p>Esto eliminará permanentemente el/los grupo/s seleccionado/s.</p>
             	    <div class="modal-buttons">
             	        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
             	        <button id="confirmDelete" class="btn-delete">Borrar</button>
