--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -49,6 +49,7 @@
                 {{group_form}}
                 <input type="submit" value="Crear Grupo">
             </form>
+            <form action="{% url 'delete' %}" method="POST" id="delete-form" hidden>{% csrf_token %}</form>
             <!-- Modal to create group if it ain't selected.-->
             <div id="createGroupModal" class="modal-overlay" style="display: none;">
                 <div class="modal-content">
@@ -64,7 +65,7 @@
         	<div id="deleteModal" class="modal-overlay" style="display: none;">
             	<div class="modal-content">
             	    <h3>Estás seguro?</h3>
-            	    <p>Esto eliminará permanentemente el grupo.</p>
+            	    <p>Esto eliminará permanentemente el/los grupo/s seleccionado/s.</p>
             	    <div class="modal-buttons">
             	        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
             	        <button id="confirmDelete" class="btn-delete">Borrar</button>
@@ -77,7 +78,7 @@
         {% for form in forms %}
         <div class="group-container">
             <div class="group-header">
-                    <input name="user_group-{{group.id}}" type="checkbox" class="delete-checkbox hidden">
+                    <input name="user_group-{{form.instance.id}}" type="checkbox" class="delete-checkbox hidden" form="delete-form">
                     <span class="material-symbols-outlined toggle-icon">expand_more</span>
                     <h3 class="group-title">{{form.instance.name}}</h3>
                     <p class="group-in-charge">Tipo: {{form.instance.permissions.name}}</p>
