--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -22,11 +22,11 @@
             <div class="filter-bar__filter-container row">
                 {% if type != "Estudiante" %}
                 <div class="filter-bar__buttons col-md-4 col-12">
-                    <div class="material-symbols-outlined col-md-1 col-3"><label for="subusersLog" id="subusersLog-label">manage_accounts</label></div>
-                    <div class="material-symbols-outlined col-md-1 col-3"><label for="subusersgroupsLog" id="subusersgroupsLog-label">groups</label></div>
+                    <div title="Historial de Usuarios" class="material-symbols-outlined col-md-1 col-3"><label for="subusersLog" id="subusersLog-label">manage_accounts</label></div>
+                    <div title="Historial de Grupos de Usuarios" class="material-symbols-outlined col-md-1 col-3"><label for="subusersgroupsLog" id="subusersgroupsLog-label">groups</label></div>
                     {% endif %}
-                    <div class="material-symbols-outlined col-md-1 col-3"><label id="objectsLog-label">view_object_track</label></div>
-                    <div class="material-symbols-outlined col-md-1 col-3"><label id="objectgroupsLog-label">stack</label></div>
+                    <div title="Historial de Objetos" class="material-symbols-outlined col-md-1 col-3"><label id="objectsLog-label">view_object_track</label></div>
+                    <div title="Historial de Grupos de Objetos" class="material-symbols-outlined col-md-1 col-3"><label id="objectgroupsLog-label">stack</label></div>
                 </div>
                 <div class="filter-bar__name col-md-4 col-0">
                     <input type="text" placeholder="Buscar objeto por nombre..." id="search-input">
