--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -94,7 +94,7 @@
                 <input type="number" value="{{form.instance.id}}" hidden name="id">
                 <div>
                     <label for="id_image_{{form.instance.id}}" >Imagen de Perfil:</label>
-                    <input type="file" name="image" class="" accept="image/*" required="" id="id_image_{{form.instance.id}}" >
+                    <input type="file" name="image" class="hidden" accept="image/*" required="" id="id_image_{{form.instance.id}}" >
                 </div>
                 <input type="submit" id="id_submit_{{form.instance.id}}" hidden>
             </form>
