--- a/static/CSS/GroupStyles.css
+++ b/static/CSS/GroupStyles.css
@@ -1,5 +1,9 @@
 * {
     box-sizing: border-box;
+    user-select: none; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none; 
 }
 
 body, div, ul, li, a, h1, h2, h3, h4, p {
