--- a/static/CSS/Users/passwordResetDoneStyles.css
+++ b/static/CSS/Users/passwordResetDoneStyles.css
@@ -1,3 +1,10 @@
+* {
+    user-select: none; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none; 
+}
+
 body, div, h1 {
     margin: 0;
     padding: 0;
