--- a/static/CSS/error403Styles.css
+++ b/static/CSS/error403Styles.css
@@ -1,4 +1,11 @@
-body{
+* {
+    user-select: none; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none; 
+}
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
