feat: Enhance deletion process with active borrowing checks and improve message handling; update log.html and object_groups.html for permission-based visibility and message display

--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -58,6 +58,9 @@
           </form>
         </div>
         <div class="logs-container">
+
+
+          {% if permissinos != "Estudiante" %}
           <!-- SUBUSERS LOG -->
         <input type="checkbox" id="subusersLog" class="filter-bar__checkbox">
         <div class="history-container subusersLog"> 
@@ -95,7 +98,7 @@
             {% endfor %}
           </div>
         </div>
-
+        {% endif %}
         <!-- OBJECTS LOG -->
         <input type="checkbox" id="objectsLog" class="filter-bar__checkbox">
         <div class="history-container objectsLog hidden">
