feat: Implement user registration email notification and update log.html for permission checks

--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -23,19 +23,19 @@
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                {% if type != "Estudiante" %}
-                <div class="filter-bar__buttons col-md-4 col-12">
+              <div class="filter-bar__buttons col-md-4 col-12">
+                    {% if permissions != "Estudiante" %}
                     <div title="Historial de Usuarios" class="material-symbols-outlined col-md-1 col-3"><label for="subusersLog" id="subusersLog-label">manage_accounts</label></div>
                     <div title="Historial de Grupos de Usuarios" class="material-symbols-outlined col-md-1 col-3"><label for="subusersgroupsLog" id="subusersgroupsLog-label">groups</label></div>
                     {% endif %}
                     <div title="Historial de Objetos" class="material-symbols-outlined col-md-1 col-3"><label id="objectsLog-label">view_object_track</label></div>
                     <div title="Historial de Grupos de Objetos" class="material-symbols-outlined col-md-1 col-3"><label id="objectgroupsLog-label">stack</label></div>
                 </div>
-                <div class="filter-bar__name col-md-4 col-0">
+                <div class='filter-bar__name col-md-4 col-0'>
                     <input type="text" placeholder="Buscar objeto por nombre..." id="search-input">
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
-                <div class="filter-bar__logo-container col-md-4 col-0">
+                <div class='filter-bar__logo-container col-md-4 col-0'>
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div> 
             </div> 
@@ -63,7 +63,7 @@
         <div class="logs-container">
 
 
-          {% if permissinos != "Estudiante" %}
+        {% if permissions != "Estudiante" %}
           <!-- SUBUSERS LOG -->
         <input type="checkbox" id="subusersLog" class="filter-bar__checkbox">
         <div class="history-container subusersLog"> 
@@ -104,7 +104,7 @@
         {% endif %}
         <!-- OBJECTS LOG -->
         <input type="checkbox" id="objectsLog" class="filter-bar__checkbox">
-        <div class="history-container objectsLog hidden">
+        <div class="history-container objectsLog {% if permissions != 'Estudiante' %} hidden {% endif %}">
           <div class="history-title">
             <span class="material-symbols-outlined">event_note</span> Historial de Objetos
           </div>
