--- a/static/CSS/Users/homeStyles.css
+++ b/static/CSS/Users/homeStyles.css
@@ -173,22 +173,58 @@ main section h2 {
     font-size: 2.5rem;
 }
 
-.services__list {
-    list-style: none;
-
+.preview {
+    margin: 80px 0;
+    padding: 0 50px;
+    text-align: center;
 }
 
-.services__item {
-    margin-top: 20px;
+.preview__title {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
 }
 
-h3 {
+.preview__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+
+.preview__item img {
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    margin-bottom: 15px;
+}
+
+.preview__item h3 {
     font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.preview__item p {
+    font-size: 1rem;
+    color: #333;
+}
+
+.logos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 30px;
+}
+
+.logos img {
+    width: 15rem;
+    height: auto;
 }
 
 footer {
     background-color: var(--fb-color);
 }
+
+
 
 
 @media  (max-width: 992px) {
@@ -228,6 +264,9 @@ footer {
         width: 80%;
     }
 
+    .preview__grid {
+        grid-template-columns: 1fr;
+    }
 }
 
 @media  (max-width: 606px) {
